# myogrid

./: LICENSE  README.md  pyproject.toml
demos/dynamic/: simple_demo.py  tow_3by5.py
demos/steady/: figure8.py  mixed20.py  titin_variations.py
src/myogrid/: overlap.py
src/myogrid/dynamic/: __init__.py  ca_transients.py  overlap.py  plot_functions.py  sarc_array.py
src/myogrid/dynamic/contr_models/: __init__.py  rice_model_2008.ode  rice_model_2008.py  rice_model_modified.ode  rice_model_modified.py  rice_model_modified_new.py  simple.ode  simple.py  simple_x.py
src/myogrid/steady/: __init__.py  plot_functions.py  steadystate_array.py
